# youtube_auto_pub

./: .gitignore  README.md  pyproject.toml
examples/: upload_private_video.py
tests/: conftest.py  test_auth.py  test_config.py  test_credentials.py  test_notifier.py  test_token_manager.py  test_uploader.py
youtube_auto_pub/: __init__.py  auth_worker.py  config.py  credentials.py  notifier.py  oauth_automater.py  test.py  token_manager.py  uploader.py
youtube_auto_pub/auth/: __init__.py  __main__.py  cli.py  flow.py  instructions.py  receivers.py
